--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Petshop
+  name: petshop
   description: An example deployment of a Backstage application.
   annotations:
     github.com/project-slug: mortenmj/petshop
@@ -13,7 +13,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: petstore
+  name: petshop
   description: The petstore API
   tags:
     - store
