Legger til providesApis

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,6 +9,8 @@ spec:
   type: website
   owner: backstage/maintainers
   lifecycle: experimental
+  providesApis:
+  - petshop
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
