--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     github.com/project-slug: mortenmj/petshop
 spec:
-  type: website
+  type: service
   owner: backstage/maintainers
   lifecycle: experimental
   providesApis:
