--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,10 +4,11 @@ metadata:
   name: petshop
   description: An example deployment of a Backstage application.
   annotations:
+    backstage.io/techdocs-ref: dir:.
     github.com/project-slug: mortenmj/petshop
 spec:
   type: service
-  owner: backstage/maintainers
+  owner: user:guest
   lifecycle: experimental
   providesApis:
   - petshop
@@ -30,7 +31,7 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: team-c
+  owner: user:guest
   definition: |
     openapi: "3.0.0"
     info:
